--- a/index.html
+++ b/index.html
@@ -933,80 +933,128 @@
               <span class="white">FEEDBACK</span>
             </h1>
           </div>
-          <div class="right_content">
-            <div class="image__container">
-              <div class="feedback_box">
-                <div class="blank-box"></div>
-                <div class="feed_back">
-                  <div class="quotes">
-                    <p>
-                      Highly recommend, experienced people and will do
-                      anything to make you satisfied. Thanks for the great
-                      service
-                    </p>
-                  </div>
-
-                  <div class="student_details">
-                    <div class="student_img">
-                      <img src="assets/images/home/s-1.png" alt="" />
-                    </div>
-
-                    <div class="student_name">
-                      <h6>Yazan Al-Halawani</h6>
-                      <h6 class="position">Student</h6>
-                    </div>
-                  </div>
-                </div>
-                <div class="blank-box"></div>
-              </div>
-
-              <div class="feedback_box">
-                <div class="blank-box"></div>
-                <div class="feed_back">
-                  <div class="quotes">
-                    <p>
-                      Experienced and professional people I got my J1 visa
-                      within less than 1 month , highly recommend
-                    </p>
-                  </div>
-
-                  <div class="student_details">
-                    <div class="student_img">
-                      <img src="assets/images/home/s-2.png" alt="" />
-                    </div>
-
-                    <div class="student_name">
-                      <h6>Huthaifa Alkhateeb</h6>
-                      <h6 class="position">Student</h6>
-                    </div>
-                  </div>
-                </div>
-                <div class="feed_back">
-                  <div class="quotes">
-                    <p>
-                      My experience with Levntura was more than wonderful, as
-                      the Intrenship program is fully final in America. In
-                      fact, within two months, they had finished everything.
-                      The student turned out to be 100% ready for a work
-                      contract, housing, and everything else was fine.
-                    </p>
-                  </div>
-
-                  <div class="student_details">
-                    <div class="student_img">
-                      <img src="assets/images/home/s-3.png" alt="" />
-                    </div>
-
-                    <div class="student_name">
-                      <h6>Afaf Kamal</h6>
-                      <h6 class="position">Student</h6>
-                    </div>
-                  </div>
-                </div>
-                <div class="blank-box"></div>
-              </div>
+<div class="right_content">
+  <div class="image__container">
+    <!-- Left column (scrolls up) -->
+    <div class="left_column">
+      <div class="feedback_box">
+        <div class="blank-box"></div>
+        <div class="feed_back">
+          <div class="quotes">
+            <p>Highly recommend, experienced people and great service.</p>
+          </div>
+          <div class="student_details">
+            <div class="student_img">
+              <img src="assets/images/home/s-1.png" alt="" />
+            </div>
+            <div class="student_name">
+              <h6>Yazan Al-Halawani</h6>
+              <h6 class="position">Student</h6>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Duplicate content for continuous loop -->
+      <div class="feedback_box">
+        <div class="blank-box"></div>
+        <div class="feed_back">
+          <div class="quotes">
+            <p>Professional people. Highly recommend!</p>
+          </div>
+          <div class="student_details">
+            <div class="student_img">
+              <img src="assets/images/home/s-2.png" alt="" />
+            </div>
+            <div class="student_name">
+              <h6>Huthaifa Alkhateeb</h6>
+              <h6 class="position">Student</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Right column (scrolls down) -->
+    <div class="right_column">
+      <div class="feedback_box">
+        <div class="blank-box"></div>
+        <div class="feed_back">
+          <div class="quotes">
+            <p>My experience with Levntura was amazing.</p>
+          </div>
+          <div class="student_details">
+            <div class="student_img">
+              <img src="assets/images/home/s-3.png" alt="" />
+            </div>
+            <div class="student_name">
+              <h6>Afaf Kamal</h6>
+              <h6 class="position">Student</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Duplicate content for continuous loop -->
+      <div class="feedback_box">
+        <div class="blank-box"></div>
+        <div class="feed_back">
+          <div class="quotes">
+            <p>Fantastic program and service!</p>
+          </div>
+          <div class="student_details">
+            <div class="student_img">
+              <img src="assets/images/home/s-2.png" alt="" />
+            </div>
+            <div class="student_name">
+              <h6>Huthaifa Alkhateeb</h6>
+              <h6 class="position">Student</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+
+       <div class="feedback_box">
+        <div class="blank-box"></div>
+        <div class="feed_back">
+          <div class="quotes">
+            <p>My experience with Levntura was amazing.</p>
+          </div>
+          <div class="student_details">
+            <div class="student_img">
+              <img src="assets/images/home/s-3.png" alt="" />
+            </div>
+            <div class="student_name">
+              <h6>Afaf Kamal</h6>
+              <h6 class="position">Student</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Duplicate content for continuous loop -->
+      <div class="feedback_box">
+        <div class="blank-box"></div>
+        <div class="feed_back">
+          <div class="quotes">
+            <p>Fantastic program and service!</p>
+          </div>
+          <div class="student_details">
+            <div class="student_img">
+              <img src="assets/images/home/s-2.png" alt="" />
+            </div>
+            <div class="student_name">
+              <h6>Huthaifa Alkhateeb</h6>
+              <h6 class="position">Student</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
           
           <div class="card__container pc_hidden swiper">
